# mlx-finetuning

./: .gitignore  README.md  prepare.py  program.md  pyproject.toml  train.py
config/: base_config.yaml  baseline_config.yaml  benchmark_results.yaml  model_config.yaml  search_space.yaml
data/: seed_questions.txt
docs/: 01-integration-plan.md  02-execution-plan.md  03-technical-architecture.md  04-benchmark-plan.md  05-config-templates.md  06-experiment-protocol.md  07-search-strategy.md  08-environment-setup.md  09-benchmark-report-2026-03-30.md  README.md
scripts/: __init__.py  benchmark.py  data_guard.py  deepseek_distill.py  evaluate_adapter.py  preflight.py  prepare_mlx_dataset.py  results.py  search.py  verify_model.py
